added qr code rendering packages, optimized canvas draws (does not draw on all 3 canvases at once)

--- a/src/index.css
+++ b/src/index.css
@@ -129,3 +129,10 @@ input, select {
 a, a:visited, a:active, a:hover {
   color: yellow;
 }
+
+
+.qr {
+	padding: 10px;
+	background-color: white;
+	display: inline-block;
+}
